--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+header {}
+
 nav > ul {
   width: 100%;
 }
@@ -5,4 +7,8 @@ nav > ul {
 nav > ul > li {
   width: calc(100%/3);
   float: left;
+}
+
+footer {
+  background-color: orange;
 }
